--- a/.env.example
+++ b/.env.example
@@ -1,10 +1,26 @@
 # Kitchen Display System - Environment Variables
 
-# Backend WebSocket URL (when ready to integrate)
-# VITE_WEBSOCKET_URL=https://your-backend.com
+# Backend API URL
+VITE_API_URL=http://localhost:8000
 
-# Development mode (set to 'false' to hide demo panel)
-# VITE_DEV_MODE=true
+# KDS Location ID (Get from your database)
+VITE_KDS_LOCATION_ID=
+
+# KDS Device ID (Optional - identifies this display device)
+VITE_DEVICE_ID=
+
+# Enable demo mode (true/false)
+VITE_DEMO_MODE=false
+
+# Connect to real backend (true/false)
+# When false, uses local state only
+VITE_USE_REAL_BACKEND=true
+
+# Optional: Bypass token for backend authentication (development/testing)
+# VITE_BYPASS_TOKEN=your-bypass-token-here
+
+# Backend WebSocket URL (Phase 3 - not yet implemented)
+# VITE_WEBSOCKET_URL=https://your-backend.com
 
 # Late order thresholds (in seconds)
 # VITE_LATE_THRESHOLD_PAID=300
